# listerine

./: .dockerignore  .env.example  .flake8  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.codex/: setup.sh
.github/workflows/: ci.yml  ios-build-and-testflight.yml  pr-preview.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_add_passkey_columns.py  0003_add_admin_and_global_categories.py  0004_add_list_category_orders.py  0005_drop_category_sort_order.py  0006_add_category_aliases.py
app/: admin.py  main.py
app/admin_templates/listerine_admin/: index.html
app/api/: deps.py
app/api/v1/: router.py
app/core/: config.py  database.py  security.py
app/fixtures/: review_seed.json
app/models/: __init__.py  category.py  grocery_item.py  grocery_list.py  household.py  list_category_order.py  user.py
app/schemas/: auth.py  domain.py
app/services/: fixture_seed.py  preview.py  websocket_hub.py
app/web/: routes.py
app/web/static/: app.css  app.js
app/web/templates/: base.html  dashboard.html  login.html  (+2 more)
deploy/webhooker/: README.md  compose.production.yml  compose.review.yml
docker/: start.sh
docs/: README.md  getting-started.md  testing.md
docs/deployment/: README.md  docker-compose.md  webhooker.md
ios/ListerineIOS/: ListerineApp.swift  Package.swift  README.md  project.yml
scripts/: capture_preview_screenshots.mjs  generate_preview_bundle.py  run_ui_e2e.mjs  setup_env.sh
test/: app.test.mjs
tests/: conftest.py  db_utils.py  test_app.py  test_fixture_seed.py  test_preview.py  test_units.py
(+27 files in other folders)
